--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,1 +1,8 @@
 extends: eslint:recommended
+env:
+  node: true
+  es6: true
+rules:
+  no-extra-parens: error
+  no-var: error
+  prefer-const: error
